--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 .pytest_cache
 .DS_Store
 .idea
-
+__pycache__/
 # Setuptools distribution and build folders.
 /dist/
 /build
@@ -19,6 +19,7 @@ keys/
 *.sublime-workspace
 
 .idea
+.vscode/
 
 logs/
 
